# Course_automation_QA_guru

./: .gitignore  README.md  pyproject.toml
Lesson_10_Jenkins/demoqa_tests/model/steps/: student_registration_steps.py
Lesson_10_Jenkins/demoqa_tests/utils/: attach.py
Lesson_10_Jenkins/simple_tests/: requirements.txt  test_fail.py  test_pass.py
Lesson_10_Jenkins/tests/: test_student_registration_form.py
Lesson_18_API_Part2/framework/: demoqa_with_env.py
Lesson_18_API_Part2/tests/: test_get_user.py
Lesson_8_HW_completed/tests/: practice_form_negative_test.py
Lesson_9_PageObject_OOP_Final/demoqa_tests/model/: application_manager.py
Lesson_9_PageObject_OOP_Final/demoqa_tests/model/components/: modal_dialog.py
Lesson_9_PageObject_OOP_Final/demoqa_tests/utils/: __init__.py  paths.py
Lesson_9_PageObject_OOP_Final/tests/: test_student_registration_form.py
lesson_2_tools_and_library/: README.md  conftest.py  fixture_test.py
lesson_5_selene_part_1/: conftest.py  test_google_search.py
lesson_5_selene_part_1/home_work/: conftest.py  test_filed_form.py
lesson_6_work_with_files/: download_with_req.py  download_with_selene.py  os_scripts.py  read_pdf.py  read_write_csv.py  work_with_archives.py  write_file.py  Æ« τΓ« ¡πª¡« ßñÑ½áΓ∞ ñ½∩ üÄ.txt
lesson_6_work_with_files/resources/: names.csv
lesson_7_PageObjects_part_1/: conftest.py  test_filed_form.py
lesson_7_PageObjects_part_1/tests/: practice_form_negative_test.py
lesson_8_PageObjects_part_1/tests/: practice_form_negative_test.py  practice_form_test.py
(+2 files in other folders)
